# OSKAR-III

./: .gitignore  README.md
electronics/firmware/00_Can_mootoridraiver/: .gitignore  00_Can_mootoridraiver.pnproj  00_Can_mootoridraiver.pnps  Makefile  main.lst  rando.elf  rando.hex  rando.lss  rando.map
electronics/firmware/00_Can_mootoridraiver/include/: mcp2515.h  spi.h
electronics/firmware/00_Can_mootoridraiver/src/: main.c  main.d  main.lst  mcp2515.c  mcp2515.d  spi.c  spi.d  spi.lst
electronics/firmware/01_Distance_Tester/: 01_Distance_Tester.pnproj  01_Distance_Tester.pnps  01_distance_tester.map  Makefile  basename.exe.stackdump  main.c
electronics/hardware/00_Can mootoridraiver/: 00_Can mootoridraiver-cache.lib  00_Can mootoridraiver.kicad_pcb  00_Can mootoridraiver.pro  00_Can mootoridraiver.sch  00_Can mootoridraiver.sch-bak  _autosave-00_Can mootoridraiver.sch
software/: setup.sh
software/src/oskar_driver/: CMakeLists.txt  package.xml
software/src/oskar_driver/include/oskar_driver/: BoardComms.h  MotorPlugin.h  Plugin.h  driver.h
software/src/oskar_driver/launch/: oskar_driver.launch
software/src/oskar_driver/src/: BoardComms.cpp  MotorPlugin.cpp  Plugin.cpp  driver.cpp  driver_node.cpp
